--- a/package.json
+++ b/package.json
@@ -1,30 +1,38 @@
 {
-  "name": "electron-app-store",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "dependencies": {
-    "@supabase/supabase-js": "^1.21.0",
-    "axios": "^0.21.1",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "node-html-parser": "^4.1.3"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.12"
-  },
-  "scripts": {
-    "start": "nodemon server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Patrick-web/electron-app-store.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Patrick-web/electron-app-store/issues"
-  },
-  "homepage": "https://github.com/Patrick-web/electron-app-store#readme"
+    "name": "electron-app-store",
+    "version": "1.0.0",
+    "description": "",
+    "main": "server.js",
+    "dependencies": {
+        "axios": "^0.26.1",
+        "cors": "^2.8.5",
+        "express": "^4.17.3",
+        "http-proxy-middleware": "^2.0.4",
+        "js-yaml": "^4.1.0",
+        "lunr": "^2.3.9",
+        "node-appwrite": "^5.0.0",
+        "node-html-parser": "^5.3.3",
+        "request": "^2.88.2",
+        "ts-node": "^10.7.0",
+        "typescript": "^4.6.3"
+    },
+    "devDependencies": {
+        "@types/lunr": "^2.3.4",
+        "@types/node": "^17.0.23",
+        "nodemon": "^2.0.15"
+    },
+    "scripts": {
+        "start": "nodemon server.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Electron-Store/electron-app-store.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Electron-Store/electron-app-store/issues"
+    },
+    "homepage": "https://github.com/Electron-Store/electron-app-store#readme"
 }
